--- a/dap4/d4ts/build.gradle
+++ b/dap4/d4ts/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'war'
 
 dependencies {
     compile project(':dap4:d4core')
+    compile project(':dap4:d4lib')
     compile project(':dap4:d4servlet')
     provided libraries["javax.servlet-api"]
     compile libraries["slf4j-api"]
